# rushia_dl

./: .dockerignore  .gitignore  DEPLOY_OCI.md  Dockerfile  Pipfile  build.sh  docker-compose.yml  pyproject.toml  readme.md  render.yaml  rushia_dl.py  setup.cfg
nginx/: nginx.conf
nginx/conf.d/: rushia-dl.conf  rushia-dl.conf.template
scripts/: add-user.sh  create-dummy-cert.sh  delete-user.sh  generate-nginx-config.sh  init-all.sh  init-letsencrypt.sh  list-users.sh  manage-user.sh  obtain-cert.sh  renew-cert.sh  setup-cron.sh  setup-dirs.sh  wait-for-nginx.sh
scripts/lib/: common.sh
src/rushia_dl/: api.py  cli.py
src/rushia_dl.egg-info/: PKG-INFO
src/rushia_dl/static/: app.js  style.css
src/rushia_dl/templates/: index.html
