[project]
name = "rushia-dl"
version = "0.1.3"
description = "YouTube video & audio download wrapper (yt-dlp based)"
authors = [
    { name = "yyuki", email = "kono@ms1.kononet.jp" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT License" }

dependencies = [
    "yt-dlp",
    "google-api-python-client",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
rushia-dl = "rushia_dl.cli:main"
rushia-web = "rushia_dl.api:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "pynvim>=0.5.2",
    "jedi>=0.19.2",
    "hatch>=1.14.1",
]

[[tool.rye.sources]]
name = "pypi"
url = "https://pypi.org/simple/"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rushia_dl"]
